# py-function-debounce

./: .gitignore  Makefile  setup.cfg
.github/workflows/: github-actions.yml
src/debounce_function/: __init__.py
tests/: tests.py
