[metadata]
name = py-debonce-function
version = 0.0.1
author = Hector Orellana
author_email = hector.orellanaf92@gmail.com
description = A small example package
long_description = file: README.org
long_description_content_type = text/org
url = https://github.com/horellana/py-debounce-function
project_urls =
    Bug Tracker = https://github.com/horellana/py-debounce-function/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
